# python-example-cli

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
package/: __main__.py
package/cli/: __main__.py  configuration.py  entrypoint.py  header.py  parser.py
package/data/: data.py  metadata.json
src/: __init__.py  entrypoint.py
src/cli/: __init__.py  colors.py  constants.py  header.py  parser.py
